Treat percent height tables with nothing to resolve against as auto

Bug: 762330
Change-Id: I8c7d97d23c75b7eb56a3d93637444d0ccada8d9b