third_party/WebKit/Source/core/layout/LayoutTableSection.cpp
@@ -1138,10 +1138,10 @@ int LayoutTableSection::DistributeExtraLogicalHeightToRows(
   return extra_logical_height - remaining_extra_logical_height;
 }
 
-bool CellHasExplicitlySpecifiedHeight(const LayoutTableCell& cell) {
-  if (cell.Style()->LogicalHeight().IsFixed())
+static bool HasExplicitlySpecifiedHeight(const LayoutObject* object) {
+  if (object->Style()->LogicalHeight().IsFixed())
     return true;
-  LayoutBlock* cb = cell.ContainingBlock();
+  LayoutBlock* cb = object->ContainingBlock();
   if (cb->AvailableLogicalHeightForPercentageComputation() == -1)
     return false;
   return true;
@@ -1149,7 +1149,7 @@ bool CellHasExplicitlySpecifiedHeight(const LayoutTableCell& cell) {
 
 static bool ShouldFlexCellChild(const LayoutTableCell& cell,
                                 LayoutObject* cell_descendant) {
-  if (!CellHasExplicitlySpecifiedHeight(cell))
+  if (!HasExplicitlySpecifiedHeight(&cell))
     return false;
   if (cell_descendant->Style()->OverflowY() == EOverflow::kVisible ||
       cell_descendant->Style()->OverflowY() == EOverflow::kHidden)
@@ -1877,8 +1877,8 @@ void LayoutTableSection::RelayoutCellIfFlexed(LayoutTableCell& cell,
   // can't hope to match the behavior perfectly, but we'll continue to refine it
   // as we discover new bugs. :)
   bool cell_children_flex = false;
-  bool flex_all_children = CellHasExplicitlySpecifiedHeight(cell) ||
-                           (!Table()->Style()->LogicalHeight().IsAuto() &&
+  bool flex_all_children = HasExplicitlySpecifiedHeight(&cell) ||
+                           (HasExplicitlySpecifiedHeight(Table()) &&
                             row_height != cell.LogicalHeight());
 
   for (LayoutObject* child = cell.FirstChild(); child;
